tests/snapshots/examples_fixtures/type_system__165_effect_row_multivar_disambiguated_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/165_effect_row_multivar_disambiguated_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
