tests/snapshots/examples_fixtures/type_system__167_base_hof_callback_effect_row_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/167_base_hof_callback_effect_row_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
