tests/snapshots/examples_fixtures/type_system__204_hm_open_row_absorbs_callee_effects_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/204_hm_open_row_absorbs_callee_effects_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
