tests/snapshots/examples_fixtures/type_system__204_strict_public_hof_contract_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/204_strict_public_hof_contract_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
