tests/snapshots/examples_fixtures/type_system__205_effect_alias_print_in_pure_function_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/205_effect_alias_print_in_pure_function_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
