tests/snapshots/examples_fixtures/type_system__207_unreachable_pattern_arm_warning_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/207_unreachable_pattern_arm_warning_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
