tests/snapshots/examples_fixtures/type_system__21_effect_polymorphism_with_e.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/21_effect_polymorphism_with_e.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
