tests/snapshots/examples_fixtures/type_system__22_handle_discharges_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/22_handle_discharges_effect.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
