tests/snapshots/examples_fixtures/type_system__23_effect_polymorphism_chain_with_e.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/23_effect_polymorphism_chain_with_e.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
