tests/snapshots/examples_fixtures/type_system__24_unit_return_effectful.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/24_unit_return_effectful.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
