tests/snapshots/examples_fixtures/type_system__25_none_return_compat.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/25_none_return_compat.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
